update index.html icon

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
 <meta charset="utf-8">
 <title></title>
-<meta name="author" content="KEY">
+<meta name="author" content="NILZ">
 <meta name="keywords" content="日常？">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <link href="avatar.gif" rel="shortcut icon">
-<link rel="icon" type="image/png" href="//dn-assets-cdn.qbox.me/favicon_128dp.png" sizes="128x128" />
+<link rel="icon" type="image/png" href="avatar.gif" sizes="128x128" />
 <!-- Javascript -->
 <!--[if lt IE 9]>
 <script src="//dn-assets-cdn.qbox.me/html5shiv/html5shiv.min.js?v=3.7.2"></script>
 <![endif]-->
-<style>html,body{height:100%;width:100%}body{display:table;margin:0;font:13px/1.65 "Segoe UI","Helvetica Neue",Helvetica,Arial,"Hiragino Kaku Gothic Pro","Meiryo","Hiragino Sans GB","Microsoft YaHei","STHeiti","SimSun",Sans-serif}a{color:#777;text-decoration:none}a:hover{color:#15C}section,footer{display:table-row}section{height:95%}footer{height:5%}span{display:table-cell;text-align:center;vertical-align:middle}</style>
+<style>html,body{height:100%;width:100%}body{display:table;margin:0;font:13px/1.65 "Segoe UI","Helvetica Neue",Helvetica,Arial,"Hiragino Kaku Gothic Pro","Meiryo","Hiragino Sans GB","Microsoft YaHei","STHeiti","SimSun",Sans-serif}a{color:#777;text-decoration:underline}a:hover{color:#15C}section,footer{display:table-row}section{height:95%}footer{height:5%}span{display:table-cell;text-align:center;vertical-align:middle}</style>
 </head>
 <body>
 <section>
